# fastapi-practice

./: .gitignore  README.md  database.py  main.py  pyproject.toml
domain/answer/: answer_router.py  answer_schema.py
domain/question/: question_crud.py  question_router.py  question_schema.py
domain/user/: user_router.py  user_schema.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/components/: Navigation.svelte
frontend/src/routes/: Detail.svelte  Home.svelte  UserCreate.svelte  UserLogin.svelte
migrations/versions/: 074b19058e8d_.py  1f12cdac6639_.py  2f4e962cb243_.py  5131dd94486c_.py  ff4984e06f97_.py
