[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["milkyKim <kimminji122258@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.13"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
